@@ -1,4 +1,4 @@
-/* $Id: platform.c,v 1.7 2010/11/05 01:45:18 dtucker Exp $ */
+/* $Id: platform.c,v 1.8 2010/11/05 01:50:41 dtucker Exp $ */
 
 /*
  * Copyright (c) 2006 Darren Tucker.  All rights reserved.
@@ -76,7 +76,8 @@ platform_setusercontext(struct passwd *pw)
 #endif
 
 #if defined(HAVE_LOGIN_CAP) && defined (__bsdi__)
-	setpgid(0, 0);
+	if (getuid() == 0 || geteuid() == 0)
+		setpgid(0, 0);
 # endif
 }
 
